another try. Hopefully older version of bookdown

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: R
 sudo: required
 cache: packages
 
-r_packages:
-  - bookdown
+#r_packages:
+#  - bookdown
 
 before_script:
   - chmod +x ./_build.sh
