--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:                           # Install Ruby and html-proofer
 
 script:
   - ./_build.sh
-  - htmlproofer --alt-ignore images/logo.svg ./docs 
+  - htmlproofer ./docs 
 
 deploy:
   provider: pages                         # Specify the gh-pages deployment method
