--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,34 @@
-branches:
-  only:
-  - master
-sudo: false
-language: ruby
-cache: bundler
+language: R
+sudo: required
+cache: packages
+
+r_packages:
+  - bookdown
+
+before_script:
+  - chmod +x ./_build.sh
+
+before_install:                           # Install Ruby and html-proofer
+  - rvm get stable --auto-dotfiles
+  - rvm install 2.3.3
+  - gem install html-proofer
+  - tlmgr install xcolor sectsty babel babel-norsk framed
+
 script:
-  - ./build.sh
+  - ./_build.sh
+  - htmlproofer --alt-ignore '/.*/' ./docs 
+
+deploy:
+  provider: pages                         # Specify the gh-pages deployment method
+  skip_cleanup: true                      # Don't remove files
+  github_token: $GITHUB_TOKEN             # Set in travis-ci.org dashboard
+  local_dir: docs                         # Deploy the docs folder
+  on:
+    branch: master
+
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true  # Speed up the html-proofer
+
+notifications:
+  email: false
