Lagt inn kapittel om Zotero

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,6 +7,7 @@ rmd_files:
     - "sas.Rmd"
     - "tilrettelegging.Rmd"
     - "ia.Rmd"
+    - "zotero.Rmd"
     - "git.Rmd"
     - "github.Rmd"
     - "git-r.Rmd"
@@ -20,6 +21,7 @@ rmd_files:
     - "sas.Rmd"
     - "tilrettelegging.Rmd"
     - "ia.Rmd"
+    - "zotero.Rmd"
     - "git.Rmd"
     - "github.Rmd"
     - "git-r.Rmd"
