--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,9 +2,7 @@ output_dir: "docs"
 delete_merged_file: TRUE
 
 rmd_files:
-  html: 
-    - "index.Rmd"
-  
+  html: ["index.Rmd"]
   - "sas.Rmd"
   - "tilrettelegging.Rmd"
   - "ia.Rmd"
