--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,12 +9,10 @@ rmd_files:
     - "rmd/ia.Rmd"
     - "rmd/zotero.Rmd"
     - "rmd/git.Rmd"
-    - "rmd/github.Rmd"
-    - "rmd/git-r.Rmd"
-    - "rmd/r-shiny.Rmd"
+    - "rmd/r.Rmd"
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
-    - "rmd/diverse.Rmd"
+#    - "rmd/diverse.Rmd"
     - "rmd/arnfinn.Rmd"
   latex:
     - "rmd/sas.Rmd"
@@ -22,10 +20,8 @@ rmd_files:
     - "rmd/ia.Rmd"
     - "rmd/zotero.Rmd"
     - "rmd/git.Rmd"
-    - "rmd/github.Rmd"
-    - "rmd/git-r.Rmd"
-    - "rmd/r-shiny.Rmd"
+    - "rmd/r.Rmd"
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
-    - "rmd/diverse.Rmd"
+#    - "rmd/diverse.Rmd"
     - "rmd/arnfinn.Rmd"
