--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -13,7 +13,7 @@ rmd_files:
     - "rmd/r.Rmd"
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
-#    - "rmd/diverse.Rmd"
+    - "rmd/linux.Rmd"
     - "rmd/arnfinn.Rmd"
   latex:
     - "rmd/sas.Rmd"
@@ -24,5 +24,5 @@ rmd_files:
     - "rmd/r.Rmd"
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
-#    - "rmd/diverse.Rmd"
+    - "rmd/linux.Rmd"
     - "rmd/arnfinn.Rmd"
