--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ r_packages:
 
 before_script:
   - chmod +x ./_build.sh
+  - chmod +x ./_installPandoc.sh
 
 before_install:                           # Install Ruby and html-proofer
   - rvm get stable --auto-dotfiles
@@ -15,6 +16,7 @@ before_install:                           # Install Ruby and html-proofer
   - tlmgr install xcolor sectsty babel babel-norsk framed libertine mweights fontaxes epigraph
 
 script:
+  - ./_installPandoc.sh
   - ./_build.sh
   - htmlproofer --alt-ignore '/.*/' ./docs 
 
