--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,6 +14,7 @@ rmd_files:
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
     - "rmd/linux.Rmd"
+    - "rmd/diverse.Rmd"
     - "rmd/arnfinn.Rmd"
   latex:
     - "rmd/sas.Rmd"
@@ -25,4 +26,5 @@ rmd_files:
     - "rmd/latex.Rmd"
     - "rmd/python.Rmd"
     - "rmd/linux.Rmd"
+    - "rmd/diverse.Rmd"
     - "rmd/arnfinn.Rmd"
