Added doc about mobilt kontor (#8)

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,6 +5,7 @@ book_filename: "SKDEdokumentasjon"
 rmd_files:
   html:
     - "index.Rmd"
+    - "rmd/mobiltkontor.Rmd"
     - "rmd/sas.Rmd"
     - "rmd/tilrettelegging.Rmd"
     - "rmd/ia.Rmd"
@@ -17,6 +18,7 @@ rmd_files:
     - "rmd/diverse.Rmd"
     - "rmd/arnfinn.Rmd"
   latex:
+    - "rmd/mobiltkontor.Rmd"
     - "rmd/sas.Rmd"
     - "rmd/tilrettelegging.Rmd"
     - "rmd/ia.Rmd"
