--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_script:
   - chmod +x ./_installPandoc.sh
 
 before_install:                           # Install Ruby and html-proofer
-  - rvm get stable --auto-dotfiles
-  - rvm install 2.3.3
+#  - rvm get stable --auto-dotfiles
+#  - rvm install 2.3.3
   - gem install html-proofer
   - tlmgr install xcolor sectsty babel babel-norsk framed libertine mweights fontaxes epigraph
 
