--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 script:
   - ./_installPandoc.sh
   - ./_build.sh
-  - htmlproofer --alt-ignore '/.*/'  --url-ignore "https://www.r-project.org/,https://cran.r-project.org/bin/windows/base/,https://hnprint.hn.helsenord.no/,Anneli@allegro-as.no,http://www-proxy.helsenord.no:8080/,https://www-proxy.helsenord.no:8080/" ./docs 
+  - htmlproofer --alt-ignore '/.*/'  --url-ignore "https://www.r-project.org/*,https://cran.r-project.org/*,https://hnprint.hn.helsenord.no/,Anneli@allegro-as.no,http://www-proxy.helsenord.no:8080/,https://www-proxy.helsenord.no:8080/" ./docs 
 
 deploy:
   provider: pages                         # Specify the gh-pages deployment method
