Travis: only deploy on push (ready for cron)

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
   local_dir: docs                         # Deploy the docs folder
   on:
     branch: master
+    type: push
 
 env:
   global:
